--- a/css/global/global.css
+++ b/css/global/global.css
@@ -11,7 +11,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+blockquote {
   margin: 0px;
 }
 
@@ -30,4 +31,8 @@ img {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+img[src$=".jpg"] {
+  border-radius: 4px;
 }
