--- a/css/global/header.css
+++ b/css/global/header.css
@@ -1,5 +1,5 @@
 .header-bg {
-  background-color: #000000;
+  background-color: var(--cor-12);
 }
 
 .header {
@@ -8,11 +8,8 @@
   gap: 20px;
   justify-content: space-between;
   align-items: center;
-  max-width: 1200px;
-  padding: 20px;
-  box-sizing: border-box;
-  margin-left: auto;
-  margin-right: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .header-menu {
@@ -25,9 +22,6 @@
   position: relative;
   display: inline-block;
   padding: 16px 0px;
-  font-size: 18px;
-  color: #ffffff;
-  border-bottom: transparent solid 3px;
 }
 
 .header-menu a::after {
@@ -35,7 +29,7 @@
   display: block;
   height: 2px;
   width: 0px;
-  background-color: #ffffff;
+  background-color: var(--cor-0);
   margin-top: 4px;
   transition: 0.3s;
   position: absolute;
@@ -50,7 +44,7 @@
     gap: 20px;
   }
   .header-menu a {
-    background-color: #111111;
+    background-color: var(--cor-12);
     padding: 12px 16px;
     border-radius: 4px;
   }
@@ -58,7 +52,7 @@
     display: none;
   }
   .header-menu a:hover {
-    background-color: #2e2e2e;
+    background-color: var(--cor-10);
   }
 }
 
