--- a/css/global/header.css
+++ b/css/global/header.css
@@ -51,6 +51,9 @@
   .header-menu a::after {
     display: none;
   }
+  .header-menu a {
+    background-color: var(--cor-11);
+  }
   .header-menu a:hover {
     background-color: var(--cor-10);
   }
