--- a/css/global/global.css
+++ b/css/global/global.css
@@ -1,36 +1,35 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
-  color: #141414;
+  color: #111111;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-p,
 h1,
 h2,
 h3,
 h4,
 h5,
-h6,
+p,
+ul,
 blockquote,
 dd {
   margin: 0px;
 }
 
 ul {
-  list-style: none;
-  margin: 0px;
   padding: 0px;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 img {
   max-width: 100%;
   height: auto;
   display: block;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
 }
 
 img[src$=".jpg"] {
