--- a/css/home/depoimento.css
+++ b/css/home/depoimento.css
@@ -9,28 +9,39 @@
   height: 100%;
   object-fit: cover;
   border-radius: 0px;
-  overflow: hidden;
 }
 
 .depoimento-conteudo {
   padding: 40px 40px 80px 80px;
-  align-self: end;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  overflow: hidden;
+  background: url("../../img/dec/top-left-p.svg") no-repeat top 40px left 40px,
+    url("../../img/dec/bottom-right-p.svg") no-repeat bottom 40px right 40px;
+}
+
+.depoimento-conteudo blockquote {
+  margin-top: auto;
 }
 
 .depoimento-conteudo p {
-  font-family: Merriweather, serif;
-  font-weight: 900;
-  font-style: italic;
-  margin-bottom: 32px;
   max-width: 32ch;
+  font-family: Merriweather;
+  font-style: italic;
+  font-weight: 900;
+  margin-bottom: 1em;
   position: relative;
+  z-index: 0;
+  display: block;
 }
 
 .depoimento p::before,
 .depoimento p::after {
-  font-size: 5rem;
   color: var(--cor-p2);
+  font-size: 5rem;
   position: absolute;
+  z-index: -1;
 }
 
 .depoimento p::before {
@@ -41,6 +52,13 @@
 
 .depoimento p::after {
   content: "”";
+  bottom: -60px;
+}
+
+@media (min-width: 1200px) {
+  .depoimento img {
+    max-height: 520px;
+  }
 }
 
 @media (max-width: 800px) {
@@ -48,11 +66,15 @@
     grid-template-columns: 1fr;
     text-align: center;
   }
+  .depoimento img {
+    max-height: 200px;
+  }
   .depoimento-conteudo {
     padding: 40px 20px;
-    justify-self: center;
+    align-items: center;
+    background: none;
   }
-  .depoimento img {
-    max-height: 300px;
+  .depoimento p::before {
+    left: 0px;
   }
 }
