--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,6 +1,6 @@
 .introducao-bg {
-  background-color: var(--cor-12);
-  color: var(--cor-0);
+  background: var(--cor-12) url("../../img/dec/bottom-left.svg") no-repeat
+    bottom 40px left 20px;
   box-shadow: inset 0 -120px var(--cor-0);
 }
 
@@ -10,50 +10,41 @@
   gap: 0px 40px;
 }
 
+.introducao img {
+  height: 100%;
+  object-fit: cover;
+}
+
 .introducao-conteudo {
   align-self: end;
   padding-bottom: 200px;
-}
-
-.introducao img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  border-radius: 4px;
 }
 
 .introducao h1 {
   margin-bottom: 32px;
 }
 
-.introducao h1 span {
-  color: var(--cor-p1);
-}
-
 .introducao p {
-  color: var(--cor-5);
   margin-bottom: 20px;
 }
 
 @media (max-width: 800px) {
-  .introducao-bg {
-    background-color: var(--cor-12);
-    padding-top: 40px;
-    box-shadow: inset 0 -60px var(--cor-0);
-  }
   .introducao {
-    grid-template-columns: 1fr;
-    gap: 32px;
+    padding-top: 40px;
+    background: var(--cor-11);
+    box-shadow: inset 0 -60px var(--cor-0);
   }
   .introducao-conteudo {
     padding-bottom: 0px;
   }
   .introducao h1 {
-    font-size: 32px;
     margin-bottom: 16px;
   }
+  .introducao {
+    grid-template-columns: 1fr;
+    gap: 32px;
+  }
   .introducao img {
-    height: 300px;
     width: 100%;
   }
 }
