--- a/css/home/tecnologia.css
+++ b/css/home/tecnologia.css
@@ -1,6 +1,11 @@
 .tecnologia-bg {
   background-color: var(--cor-11);
-  box-shadow: inset 0 80px var(--cor-0), inset 0 -80px var(--cor-0);
+  box-shadow: inset 0 120px var(--cor-0), inset 0 -120px var(--cor-0);
+  /* possível solução */
+  /* background: url("../../img/dec/bottom-left.svg") no-repeat bottom 160px left
+      20px,
+    linear-gradient(#fff var(--offset), rgba(255, 255, 255, 0) 0px),
+    linear-gradient(to top, #fff var(--offset), #111 0px); */
 }
 
 .tecnologia {
@@ -10,23 +15,24 @@
 }
 
 .tecnologia-imagem img {
-  height: 100%;
   width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: left;
 }
 
 .tecnologia-conteudo {
-  padding-top: 160px;
-  padding-bottom: 160px;
+  padding-top: 180px;
+  padding-bottom: 180px;
 }
 
 .tecnologia-conteudo > span {
+  text-transform: uppercase;
   display: block;
   margin-bottom: 20px;
 }
 
-.tecnologia-conteudo > h2 {
+.tecnologia-conteudo h2 {
   margin-bottom: 32px;
 }
 
@@ -34,7 +40,7 @@
   margin-bottom: 20px;
 }
 
-.tecnologia a {
+.tecnologia-conteudo a {
   margin-bottom: 80px;
 }
 
@@ -67,7 +73,7 @@
   .tecnologia-imagem {
     display: none;
   }
-  .tecnologia a {
+  .tecnologia-conteudo a {
     margin-bottom: 60px;
   }
 }
