--- a/css/seguros/seguros.css
+++ b/css/seguros/seguros.css
@@ -1,5 +1,6 @@
 .seguros-bg {
-  background-color: var(--cor-11);
+  background: var(--cor-11) url("../../img/dec/bottom-left.svg") no-repeat
+    bottom 40px left 20px;
 }
 
 .seguros {
@@ -18,12 +19,13 @@
 .seguros h2 {
   grid-column: 1/-1;
 }
+
 .seguros-item {
-  background-color: var(--cor-12);
-  padding: 32px 32px 32px 60px;
   display: grid;
   grid-template-columns: 1fr auto;
+  padding: 32px 32px 32px 60px;
   border-radius: 4px;
+  background-color: var(--cor-12);
 }
 
 .seguros-item h3 {
@@ -33,7 +35,7 @@
 .seguros-item span {
   grid-column: 2;
   display: block;
-  justify-self: end;
+  text-align: right;
 }
 
 .seguros-item ul {
@@ -45,7 +47,7 @@
   margin-top: 20px;
 }
 
-.seguros li {
+.seguros-item li {
   display: flex;
   align-items: center;
   position: relative;
@@ -53,15 +55,21 @@
 
 .seguros-item li::before {
   content: "";
-  display: inline-block;
+  position: absolute;
+  left: -21px;
   width: 13px;
   height: 9px;
   background-image: url("../../img/icones/lista.svg");
-  position: absolute;
-  left: -21px;
+}
+
+.seguros-item a {
+  grid-column: 1/-1;
 }
 
 @media (max-width: 800px) {
+  .seguros-bg {
+    background: var(--cor-11);
+  }
   .seguros {
     grid-template-columns: 1fr;
   }
