--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,41 @@
-@import url(./global/global.css);
-@import url(./global/header.css);
-@import url(./global/footer.css);
+@import "./global/global.css";
 
-/* Utilidades - Componentes Comuns */
-@import url(./utilidades/componentes.css);
-@import url(./utilidades/tipografia.css);
-@import url(./utilidades/cores.css);
-@import url(./utilidades/formulario.css);
+/* Utilidades */
+@import "./utilidades/tipografia.css";
+@import "./utilidades/cores.css";
+@import "./utilidades/componentes.css";
+@import "./utilidades/formulario.css";
+/* @import "./utilidades/simple-anime.css"; */
 
-/* Página inicial - Home */
-@import url(./home/introducao.css);
-@import url(./home/tecnologia.css);
-@import url(./home/parceiros.css);
-@import url(./home/depoimento.css);
+/* Header e Footer */
+@import "./global/header.css";
+@import "./global/footer.css";
 
-/* Biciletas */
-@import url(./bicicletas/bicicletas-lista.css);
-@import url(./bicicletas/bicicletas.css);
-
-/* Bicicleta */
-@import url(./bicicleta/bicicleta.css);
-@import url(./bicicleta/seguro.css);
+/* Home */
+@import "./home/introducao.css";
+@import "./home/tecnologia.css";
+@import "./home/parceiros.css";
+@import "./home/depoimento.css";
 
 /* Seguros */
-@import url(./seguros/seguros.css);
-@import url(./seguros/vantagens.css);
-@import url(./seguros/perguntas.css);
+@import "./seguros/seguros.css";
+@import "./seguros/vantagens.css";
+@import "./seguros/perguntas.css";
+
+/* Biciletas */
+@import "./bicicletas/bicicletas.css";
+@import "./bicicletas/bicicletas-lista.css";
+
+/* Bicileta */
+@import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
 
 /* Contato */
-@import url(./contato/contato.css);
-@import url(./contato/lojas.css);
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
 
 /* Orçamento */
-@import url(./orcamento/orcamento.css);
+@import "./orcamento/orcamento.css";
 
 /* Termos */
-@import url(./termos/termos.css);
+@import "./termos/termos.css";
