--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,20 +1,21 @@
 .container {
-  max-width: 1200px;
   box-sizing: border-box;
+  max-width: 1200px;
   padding-left: 20px;
   padding-right: 20px;
-  margin-right: auto;
   margin-left: auto;
+  margin-right: auto;
 }
 
 .botao {
   display: inline-block;
   padding: 16px 32px;
   background: linear-gradient(#ffbf00, #f2a50c);
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
-  color: var(--cor-p5);
+  text-transform: uppercase;
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
+  color: var(--cor-p5);
   max-width: max-content;
   border: none;
   cursor: pointer;
@@ -44,7 +45,7 @@
   width: 18px;
   height: 10px;
   margin-left: 12px;
-  background: url(../../img/icones/seta.svg);
+  background: url("../../img/icones/seta.svg");
   transition: transform 0.2s;
 }
 
@@ -61,9 +62,11 @@
 
 .link {
   display: inline-block;
+  font: 500 1.5rem/1.5 "Poppins", sans-serif;
   color: var(--cor-p1);
-  font: 600 1.5rem/1.5 "Poppins";
   text-transform: uppercase;
+  position: relative;
+  padding-bottom: 8px;
 }
 
 .link::after {
@@ -71,32 +74,35 @@
   display: block;
   width: 100%;
   height: 4px;
-  background-color: currentColor;
+  background: currentColor;
+  position: absolute;
+  margin-top: 4px;
 }
 
 .link:hover {
   color: var(--cor-0);
 }
 
-/* titulo internos */
-.titulo-bg {
-  background-color: var(--cor-11);
-  padding-top: 60px;
-  padding-bottom: 60px;
+.titulo {
+  padding: 60px 0;
+  background: var(--cor-11);
 }
 
-.titulo {
+.titulo div {
+  background: url("../../img/dec/top-right.svg") no-repeat top right 20px;
+}
+
+.titulo p {
   margin-bottom: 4px;
 }
 
 @media (max-width: 800px) {
-  .titulo {
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
   .titulo p {
     font-size: 1rem;
     text-transform: lowercase;
     font-weight: 400;
+  }
+  .titulo {
+    padding: 40px 0;
   }
 }
